--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,10 @@
 {
+    "version": 2,
     "builds": [
-      {
-        "src": "client/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "client/dist"
-        }
-      }
+      { "src": "client/package.json", "use": "@vercel/static-build" }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "client/$1"
-      }
+      { "src": "/(.*)", "dest": "/client/$1" }
     ]
   }
   
