--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,22 @@
 {
     "version": 2,
     "builds": [
-      { "src": "client/package.json", "use": "@vercel/static-build" }
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        }
+      }
     ],
-    "routes": [
-      { "src": "/(.*)", "dest": "/client/$1" }
-    ]
+    "rewrites": [
+      {
+        "source": "/api/(.*)",
+        "destination": "https://videotube-backend-delta.vercel.app/api/$1"
+      }
+    ],
+    "env": {
+      "VITE_API_BASE_URL": "https://videotube-backend-delta.vercel.app/api/v1"
+    }
   }
   
