--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_API_BASE_URL=https://videotube-backend-delta.vercel.app/api/v1
+VITE_API_BASE_URL=https://videotube-frontend.vercel.app/api/v1
 
 
 MODE=development
