chore: Update API base URL to use the backend server

--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,25 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
       }
-    ],
-    "rewrites": [
-      {
-        "source": "/api/(.*)",
-        "destination": "https://videotube-backend-delta.vercel.app/api/$1"
-      }
-    ],
-    "env": {
-      "VITE_API_BASE_URL": "https://videotube-backend-delta.vercel.app/api/v1"
     }
+  ],
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "https://videotube-backend-delta.vercel.app/api/$1"
+    },
+    {
+      "source": "/(.*)",
+      "destination": "/index.html"
+    }
+  ],
+  "env": {
+    "VITE_API_BASE_URL": "https://videotube-backend-delta.vercel.app/api/v1"
   }
-  
+}
