--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=https://videotube-backend-delta.vercel.app/api/v1
+# VITE_API_BASE_URL=https://videotube-backend-delta.vercel.app/api/v1
+VITE_API_BASE_URL=http://localhost:8000/api/v1
 
 
-MODE=production
+MODE=development
