--- a/.env
+++ b/.env
@@ -2,5 +2,7 @@
 
 # VITE_API_BASE_URL=http://localhost:8000/api/v1
 
-VITE_API_BASE_URL = https://videotube-backend-wyz1.onrender.com/api/v1
+# VITE_API_BASE_URL = https://videotube-backend-wyz1.onrender.com/api/v1
+VITE_API_BASE_URL = https://videotube-backend-beta.vercel.app/api/v1
+
 
